# milkshake

./: MODULE.bazel  Makefile  README.md  WORKSPACE  build.gradle  gradle.properties  maven_install.json
.github/workflows/: main.yml
mod/: BUILD.bazel
mod/src/client/kotlin/com/client/github/: AntiHungerMixin.kt  MovementPacketMixin.kt  SagilithsPvEUtilsPrivateClient.kt
mod/src/client/kotlin/com/client/github/bootstrap/: Tick.kt
mod/src/client/kotlin/com/client/github/clickgui/: Composer.kt  Events.kt
mod/src/client/kotlin/com/client/github/components/: Arrow.kt  Box.kt  Circle.kt  Line.kt  Text.kt
mod/src/client/kotlin/com/client/github/feature/: Feature.kt
mod/src/client/kotlin/com/client/github/feature/boat/: BoatFly.kt
mod/src/client/kotlin/com/client/github/feature/combat/: KillAura.kt
mod/src/client/kotlin/com/client/github/feature/elytra/: ElytraFlight.kt  ElytraTiming.kt
mod/src/client/kotlin/com/client/github/feature/player/: AntiFireDamage.kt  AntiHunger.kt  LiquidWalk.kt  NoFall.kt  NoJumpDelay.kt  PlayerFlight.kt
mod/src/client/kotlin/com/client/github/feature/utility/: FastBreak.kt  FastPlace.kt  FreeCam.kt  FullBright.kt
mod/src/client/kotlin/com/client/github/feature/visual/: DangerMobAlert.kt  ExtrasensoryPerception.kt  LagAlert.kt  Xray.kt  Zoom.kt
mod/src/client/kotlin/com/client/github/mixin/: AntiTelemetryMixin.kt  BlockModelRendererMixin.kt  EntityMixin.kt  MinecraftClientMixin.kt  MouseMixin.kt  MovementPacketMixin.kt  NarratorManagerMixin.kt  ThreadExecutorMixin.kt
mod/src/client/kotlin/com/client/github/util/: Geometry.kt
mod/src/client/resources/: sagiliths-pve-utils-private.client.mixins.json
mod/src/client/resources/resourcepacks/sagiliths-pve-utils-private/assets/minecraft/font/: default.json
repo/: minecraft_jar.bzl
rule/: remap_jar.bzl
rule/extract/: BUILD.bazel
rule/mapping_merger/: BUILD.bazel
rule/mapping_merger/src/main/java/top/fifthlight/fabazel/mappingmerger/: MappingMerger.java
rule/tiny_remapper/: BUILD.bazel
rule/tiny_remapper_worker/: BUILD.bazel
rule/tiny_remapper_worker/src/main/kotlin/top/fifthlight/fabazel/remapper/: MappingManager.kt  TinyRemapperWorker.kt
src/client/java/com/client/: ClientBrandRetrieverMixin.java
src/client/kotlin/com/client/github/: AntiHungerMixin.kt  SagilithsPvEUtilsPrivateClient.kt
src/client/kotlin/com/client/github/bootstrap/: Tick.kt
src/client/kotlin/com/client/github/feature/: Feature.kt
src/client/kotlin/com/client/github/feature/combat/: KillAura.kt
src/client/kotlin/com/client/github/feature/elytra/: ElytraFlight.kt  ElytraFlightMode.kt  ElytraTarget.kt
src/client/kotlin/com/client/github/feature/elytra/modes/: Firework.kt
src/client/kotlin/com/client/github/feature/utility/: RefillOffhand.kt
src/client/kotlin/com/client/github/hud/: Tab.kt
src/client/kotlin/com/utility/: Inventory.kt  PathUtils.kt  TargetLock.kt
src/client/resources/: fabric.mod.json  sagiliths-pve-utils-private.client.mixins.json  sagiliths-pve-utils-private.mixins.json
